Fix textbox spacing

--- a/app/frontend/stylesheets/public/3_content_blocks/blocks.sass
+++ b/app/frontend/stylesheets/public/3_content_blocks/blocks.sass
@@ -21,7 +21,7 @@
   .cb-button-action,
   .cb-text-list,
   .cb-text-paragraph,
-  .cb-text-textbox.cb-text-textbox--poem,
+  .cb-text-textbox.cb-text-textbox--simple,
   .cb-generic-catalog--title,
   .cb-image-media--narrow,
   .cb-image-media--floating,
